# api/src/main/java/api/arduinothermohygrometer/service/BatteryService.java
@@ -1,6 +1,5 @@
 package api.arduinothermohygrometer.service;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -10,16 +9,13 @@ import api.arduinothermohygrometer.exception.ResourceNotCreatedException;
 import api.arduinothermohygrometer.exception.ResourceNotFoundException;
 
 public interface BatteryService {
-    BatteryDto getBatteryById(UUID id) throws ResourceNotFoundException;
+    BatteryDto getBatteryById(final UUID id) throws ResourceNotFoundException;
 
-    BatteryDto getBatteryByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
+    List<BatteryDto> getBatteriesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 
-    List<BatteryDto> getBatteriesByDate(LocalDate date);
+    BatteryDto createBattery(final BatteryDto batteryDto) throws ResourceNotCreatedException;
 
-    BatteryDto createBattery(BatteryDto batteryDto) throws ResourceNotCreatedException;
+    void deleteBatteryById(final UUID id) throws ResourceNotFoundException;
 
-    void deleteBatteryById(UUID id) throws ResourceNotFoundException;
-
-    void deleteBatteryByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
-
+    void deleteBatteriesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 }
