# api/src/main/java/api/arduinothermohygrometer/service/HumidityService.java
@@ -1,6 +1,5 @@
 package api.arduinothermohygrometer.service;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -10,15 +9,13 @@ import api.arduinothermohygrometer.exception.ResourceNotCreatedException;
 import api.arduinothermohygrometer.exception.ResourceNotFoundException;
 
 public interface HumidityService {
-    HumidityDto getHumidityById(UUID id) throws ResourceNotFoundException;
+    HumidityDto getHumidityById(final UUID id) throws ResourceNotFoundException;
 
-    HumidityDto getHumidityByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
+    List<HumidityDto> getHumiditiesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 
-    List<HumidityDto> getHumiditiesByDate(LocalDate date);
+    HumidityDto createHumidity(final HumidityDto humidityDto) throws ResourceNotCreatedException;
 
-    HumidityDto createHumidity(HumidityDto humidityDto) throws ResourceNotCreatedException;
+    void deleteHumidityById(final UUID id) throws ResourceNotFoundException;
 
-    void deleteHumidityById(UUID id) throws ResourceNotFoundException;
-
-    void deleteHumidityByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
+    void deleteHumiditiesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 }
