# api/src/main/java/api/arduinothermohygrometer/service/TemperatureService.java
@@ -1,6 +1,5 @@
 package api.arduinothermohygrometer.service;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -10,15 +9,13 @@ import api.arduinothermohygrometer.exception.ResourceNotCreatedException;
 import api.arduinothermohygrometer.exception.ResourceNotFoundException;
 
 public interface TemperatureService {
-    TemperatureDto getTemperatureById(UUID id) throws ResourceNotFoundException;
+    TemperatureDto getTemperatureById(final UUID id) throws ResourceNotFoundException;
 
-    TemperatureDto getTemperatureByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
+    List<TemperatureDto> getTemperaturesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 
-    List<TemperatureDto> getTemperaturesByDate(LocalDate date);
+    TemperatureDto createTemperature(final TemperatureDto temperatureDto) throws ResourceNotCreatedException;
 
-    TemperatureDto createTemperature(TemperatureDto temperatureDto) throws ResourceNotCreatedException;
+    void deleteTemperatureById(final UUID id) throws ResourceNotFoundException;
 
-    void deleteTemperatureById(UUID id) throws ResourceNotFoundException;
-
-    void deleteTemperatureByTimestamp(LocalDateTime timestamp) throws ResourceNotFoundException;
+    void deleteTemperaturesByDateOrTimestamp(final LocalDateTime dateTime, final boolean checkOnlyDate) throws ResourceNotFoundException;
 }
